Fix table selected row in dark mode

--- a/projects/mdl-angular/table2/table2.component.scss
+++ b/projects/mdl-angular/table2/table2.component.scss
@@ -1,6 +1,9 @@
+@use "sass:color";
 @use "@angular/material" as mat;
 @use "../scss/colors";
 @use "../scss/vars";
+
+$blue-veil: color.change(colors.$primary, $alpha: 0.0625);
 
 :host {
   position: relative;
@@ -65,6 +68,7 @@
     overflow: auto;
     margin: 0.5rem 0 0 1rem;
     padding-right: 1rem;
+    padding-bottom: 1rem;
     flex-grow: 1;
     position: relative;
 
@@ -98,9 +102,9 @@
   height: unset !important;
 }
 
-.mat-mdc-row {
+::ng-deep .mat-mdc-row {
   transition: background-color vars.$animation;
-  border: 1px solid transparent;
+  // border: 1px solid transparent;
   box-sizing: border-box;
 
   &:hover:not(.expanded) {
@@ -117,12 +121,12 @@
       border-top-right-radius: 0;
 
       &.selected {
-        border: 1px dashed colors.$primary;
-        border-top: 1px solid transparent;
-        background-color: #f2f9fd;
+        // border: 1px dashed colors.$primary;
+        // border-top: 1px solid transparent;
+        // background-color: #f2f9fd;
 
-        .dark & {
-          color: colors.$primary-dark;
+        .mat-mdc-cell {
+          background-color: $blue-veil;
         }
       }
     }
@@ -136,15 +140,10 @@
     }
 
     &.selected {
-      border: 1px dashed colors.$primary;
-      background-color: #f2f9fd;
+      // border: 1px dashed colors.$primary;
 
-      .dark & {
-        border-color: colors.$primary-dark;
-      }
-
-      &.expanded {
-        border-bottom: 1px solid transparent;
+      .mat-mdc-cell {
+        background-color: $blue-veil;
       }
     }
   }
